# lint-arwaky

./: .bandit  .caspianignore  .env.example  .gitignore  .gitmodules  .hook-checksum  .lint-history.json  .opengrepignore  .prettierignore  .security-checksums  AGENTS.md  ARCHITECTURE.md  AUDIT_taxonomy_rust.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE  MIGRATION_PYTHON.md  MIGRATION_RUST.md  MIGRATION_TYPESCRIPT.md  MIMOCODE.md  ORIGINAL_REQUEST.md  PERFORMANCE_OPTIMIZATIONS.md  PRD.md  PROMPT_REFACTOR_CONTAINER.md  README.md  RULES_AES.md  RULES_BANDIT.md  RULES_CLIPPY.md  RULES_MYPY.md  RULES_RUFF.md  RULES_RUSTFMT.md  RULES_TSC.md  SKILL.md  TEST.md  auto_linter.config.javascript.yaml  auto_linter.config.python.yaml  auto_linter.config.rust.yaml  build.local.sh  (+31 more)
crates/auto-fix/: Cargo.toml  FRD.md  auto_fix_container.rs
crates/auto-fix/benches/: bench_auto_fix_throughput.rs
crates/auto-fix/src/: agent_fix_orchestrator.rs  capabilities_file_adapter.rs  capabilities_fix_processor.rs  contract_fix_protocol.rs  infrastructure_file_adapter.rs  infrastructure_symbol_adapter.rs  lib.rs  mod.rs  root_auto_fix_container.rs
crates/auto-fix/tests/: acceptance_FR_001.rs  acceptance_FR_002.rs  acceptance_FR_003.rs  acceptance_FR_004.rs  acceptance_frd_bypass_warning.rs  acceptance_frd_file_naming.rs  acceptance_frd_idempotency.rs  acceptance_frd_unused_import.rs  agent_fix_orchestrator_tests.rs  bench_auto_fix_throughput.rs  capabilities_fix_processor_tests.rs  contract_auto_fix.rs  e2e_auto_fix_flow.rs  fix_processor_tests.rs  integration_auto_fix.rs  integration_fix_orchestrator.rs  root_auto_fix_container_tests.rs  smoke_auto_fix.rs  unit_auto_fix_file_adapter.rs  unit_auto_fix_fix_processor.rs  unit_auto_fix_orchestrator.rs
crates/cli-commands/: Cargo.toml  FRD.md
crates/cli-commands/benches/: bench_cli_commands_formatting.rs
crates/cli-commands/src/: agent_analysis_pipeline_orchestrator.rs  agent_dev_orchestrator.rs  agent_json_formatter.rs  agent_junit_formatter.rs  agent_maintenance_orchestrator.rs  agent_report_formatter_orchestrator.rs  agent_sarif_formatter.rs  agent_text_formatter.rs  capabilities_language_detector.rs  infrastructure_check_context.rs  infrastructure_language_detector.rs  infrastructure_path_normalization.rs  infrastructure_scanner_provider.rs  infrastructure_transport_client.rs  lib.rs  root_cli_container.rs  root_transport_container.rs  surface_bootstrap_command.rs  surface_check_action.rs  surface_check_command.rs  surface_check_main.rs  surface_ci_action.rs  surface_ci_command.rs  surface_common_action.rs  surface_common_command.rs  surface_config_command.rs  surface_core_command.rs  surface_dev_command.rs  surface_external_action.rs  surface_fix_action.rs  surface_fix_command.rs  surface_git_command.rs  surface_import_action.rs  surface_import_command.rs  surface_maintenance_command.rs  surface_map_command.rs  surface_multi_command.rs  surface_naming_action.rs  surface_orphan_action.rs  surface_orphan_command.rs  (+14 more)
crates/cli-commands/tests/: acceptance_FRD_check.rs  acceptance_FRD_ci.rs  acceptance_FRD_config_show.rs  acceptance_FRD_exit_codes.rs  acceptance_FRD_formats.rs  acceptance_FRD_maintenance.rs  acceptance_FRD_scan.rs  acceptance_FRD_setup.rs  acceptance_FR_001.rs  acceptance_FR_004.rs  acceptance_FR_010.rs  acceptance_FR_015.rs  bench_cli_commands_formatting.rs  cli_e2e_tests.rs  contract_cli_commands.rs  e2e_check_scan_flow.rs  e2e_fix_flow.rs  infrastructure_language_detector_tests.rs  integration_cli_commands.rs  smoke_cli_commands.rs  surface_check_action_tests.rs  surface_common_command_tests.rs  surface_setup_command_tests.rs  unit_cli_commands_check_action.rs  unit_cli_commands_common_command.rs  unit_cli_commands_config_redaction.rs  unit_cli_commands_fix_command.rs  unit_cli_commands_format_output.rs  unit_cli_commands_setup_command.rs  unit_cli_commands_taxonomy.rs
crates/cli-transport/: Cargo.toml
crates/cli-transport/src/: infrastructure_transport_client.rs  lib.rs  taxonomy_transport_error.rs
crates/code-analysis/: Cargo.toml  FRD.md  analysis_container.rs
crates/code-analysis/benches/: bench_code_analysis_throughput.rs
crates/code-analysis/src/: agent_checking_orchestrator.rs  agent_code_analysis_orchestrator.rs  agent_codebase_scan_orchestrator.rs  agent_project_target_orchestrator.rs  analysis_container.rs  capabilities_analysis_reporter.rs  capabilities_arch_lint.rs  capabilities_arch_self_lint_checker.rs  capabilities_check_bypass_checker.rs  capabilities_checker_container.rs  capabilities_class_checker.rs  capabilities_code_duplication_analyzer.rs  capabilities_code_metric_analyzer.rs  capabilities_cycle_analyzer.rs  capabilities_dead_inheritance_checker.rs  capabilities_file_collector_provider.rs  capabilities_line_checker.rs  (+15 more)
crates/config-system/: Cargo.toml  FRD.md
crates/di-containers/: Cargo.toml
crates/external-lint/: Cargo.toml  FRD.md
crates/file-system/: Cargo.toml
crates/file-watch/: Cargo.toml  FRD.md
crates/git-hooks/: Cargo.toml  FRD.md  git_container.rs
crates/import-rules/: Cargo.toml  FRD.md  import_container.rs
crates/language-adapters/: Cargo.toml
crates/lifecycle-state/: Cargo.toml
crates/maintenance/: Cargo.toml  FRD.md
crates/mcp-server/: Cargo.toml  FRD.md
crates/metrics-service/: Cargo.toml
crates/multi-project/: Cargo.toml  multi_project_container.rs
crates/naming-rules/: Cargo.toml  FRD.md
crates/orphan-detector/: Cargo.toml  FRD.md  orphan_container.rs
crates/output-report/: Cargo.toml
crates/pipeline-jobs/: Cargo.toml  pipeline_container.rs
crates/project-setup/: Cargo.toml  FRD.md
crates/report-formatter/: Cargo.toml  FRD.md  README.md
crates/role-rules/: Cargo.toml  FRD.md
crates/shared/: Cargo.toml  FRD.md  build.rs
crates/source-parsing/: Cargo.toml  source_parsing_container.rs
test-project-python/: lint_arwaky.config.python.yaml  pyproject.toml
test-project-python/src-python/: __main__.py
test-project-rust/: Cargo.toml  lint_arwaky.config.rust.yaml
test-project-rust/src-rust/: main.rs  root_violation.rs
(+4465 files in other folders)
