[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# Workspace member crates
shared = { package = "shared-lint-arwaky", path = "crates/shared" }
source_parsing = { package = "source_parsing-lint-arwaky", path = "crates/source-parsing" }
naming_rules = { package = "naming_rules-lint-arwaky", path = "crates/naming-rules" }
import_rules = { package = "import_rules-lint-arwaky", path = "crates/import-rules" }
code_analysis = { package = "code_analysis-lint-arwaky", path = "crates/code-analysis" }
auto_fix = { package = "auto_fix-lint-arwaky", path = "crates/auto-fix" }
cli_commands = { package = "cli_commands-lint-arwaky", path = "crates/cli-commands" }
config_system = { package = "config_system-lint-arwaky", path = "crates/config-system" }
file_watch = { package = "file_watch-lint-arwaky", path = "crates/file-watch" }
git_hooks = { package = "git_hooks-lint-arwaky", path = "crates/git-hooks" }
external_lint = { package = "external_lint-lint-arwaky", path = "crates/external-lint" }
mcp_server = { package = "mcp_server-lint-arwaky", path = "crates/mcp-server" }
multi_project = { package = "multi_project-lint-arwaky", path = "crates/multi-project" }
orphan_detector = { package = "orphan_detector-lint-arwaky", path = "crates/orphan-detector" }
project_setup = { package = "project_setup-lint-arwaky", path = "crates/project-setup" }
maintenance = { package = "maintenance-lint-arwaky", path = "crates/maintenance" }
role_rules = { package = "role_rules-lint-arwaky", path = "crates/role-rules" }
vscode_extension = { package = "vscode_extension-lint-arwaky", path = "crates/vscode-extension" }

# External dependencies (pinned versions - all crates inherit from here)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.52.3", features = ["full"] }
once_cell = "1.21.4"
async-trait = "0.1.89"
thiserror = "1.0.52"
anyhow = "1.0.102"
serde_yaml = "0.9.34"
toml = "1.1.2"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
chrono = "0.4.44"
mcp-sdk-rs = "0.3.4"
rand = "0.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustsec = "0.33"
dirs = "6.0"
dialoguer = "0.11"
console = "0.15"
ctrlc = "3.4"
futures = "0.3"

[package]
name = "lint_arwaky-arwaky"
version = "1.10.25"
edition = "2021"
description = "Autonomous code quality and architecture enforcement for AI agents and developers, enforcing 27 Agentic Engineering System (AES) rules."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
homepage = "https://github.com/rakaarwaky/lint-arwaky"
readme = "README.md"

[lib]
name = "lint_arwaky"
path = "crates/lib.rs"

[[bin]]
name = "lint-arwaky-cli"
path = "crates/root_cli_main_entry.rs"

[[bin]]
name = "lint-arwaky-mcp"
path = "crates/root_mcp_main_entry.rs"

[[bin]]
name = "lint-arwaky-tui"
path = "crates/root_tui_main_entry.rs"

[features]
default = ["check_surfaces"]
watch = ["file_watch/watch"]
check_taxonomy = []
check_contract = ["check_taxonomy"]
check_capabilities = ["check_contract"]
check_infrastructure = ["check_contract"]
check_agent = ["check_capabilities", "check_infrastructure"]
check_surfaces = ["check_agent"]

[dependencies]
shared.workspace = true
source_parsing.workspace = true
naming_rules.workspace = true
import_rules.workspace = true
code_analysis.workspace = true
auto_fix.workspace = true
cli_commands.workspace = true
config_system.workspace = true
file_watch.workspace = true
git_hooks.workspace = true
external_lint.workspace = true
mcp_server.workspace = true
multi_project.workspace = true
orphan_detector.workspace = true
project_setup.workspace = true
maintenance.workspace = true
role_rules.workspace = true
vscode_extension.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tokio.workspace = true
once_cell.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_yaml.workspace = true
toml.workspace = true
clap.workspace = true
reqwest.workspace = true
chrono.workspace = true
mcp-sdk-rs.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustsec.workspace = true
dirs.workspace = true
dialoguer.workspace = true
console.workspace = true
ctrlc.workspace = true
futures.workspace = true

[profile.release]
opt-level = 2

[profile.release.package.regex-automata]
opt-level = 0

[profile.release.package.regex-syntax]
opt-level = 0
