[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# Workspace member crates
shared = { package = "shared-lint-arwaky", path = "crates/shared" }
source_parsing = { package = "source_parsing-lint-arwaky", path = "crates/source-parsing" }
naming_rules = { package = "naming_rules-lint-arwaky", path = "crates/naming-rules" }
import_rules = { package = "import_rules-lint-arwaky", path = "crates/import-rules" }
code_analysis = { package = "code_analysis-lint-arwaky", path = "crates/code-analysis" }
auto_fix = { package = "auto_fix-lint-arwaky", path = "crates/auto-fix" }
cli_commands = { package = "cli_commands-lint-arwaky", path = "crates/cli-commands" }
config_system = { package = "config_system-lint-arwaky", path = "crates/config-system" }
file_watch = { package = "file_watch-lint-arwaky", path = "crates/file-watch" }
git_hooks = { package = "git_hooks-lint-arwaky", path = "crates/git-hooks" }
external_lint = { package = "external_lint-lint-arwaky", path = "crates/external-lint" }
mcp_server = { package = "mcp_server-lint-arwaky", path = "crates/mcp-server" }
orphan_detector = { package = "orphan_detector-lint-arwaky", path = "crates/orphan-detector" }
project_setup = { package = "project_setup-lint-arwaky", path = "crates/project-setup" }
maintenance = { package = "maintenance-lint-arwaky", path = "crates/maintenance" }
role_rules = { package = "role_rules-lint-arwaky", path = "crates/role-rules" }

# External dependencies (pinned versions - all crates inherit from here)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.52.3", features = ["full"] }
notify = "6"
notify-debouncer-mini = "0.4"
once_cell = "1.21.4"
async-trait = "0.1.89"
thiserror = "1.0.52"
anyhow = "1.0.102"
serde_yaml = "0.9.34"
toml = "1.1.2"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
chrono = "0.4.44"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
rand = "0.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustsec = "0.33"
dirs = "6.0"
dialoguer = "0.11"
console = "0.15"
ctrlc = "3.4"
futures = "0.3"

[package]
name = "lint_arwaky-arwaky"
version = "1.10.36"
edition = "2021"
description = "Autonomous code quality and architecture enforcement for AI agents and developers, enforcing 27 Agentic Engineering System (AES) rules."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
homepage = "https://github.com/rakaarwaky/lint-arwaky"
readme = "README.md"

[lib]
name = "lint_arwaky"
path = "crates/lib.rs"

[[bin]]
name = "lint-arwaky-cli"
path = "crates/root_cli_main_entry.rs"

[[bin]]
name = "lint-arwaky-mcp"
path = "crates/root_mcp_main_entry.rs"

[[bin]]
name = "lint-arwaky-tui"
path = "crates/root_tui_main_entry.rs"

[features]
default = ["check_surfaces"]
watch = ["file_watch/watch"]
check_taxonomy = []
check_contract = ["check_taxonomy"]
check_capabilities = ["check_contract"]
check_infrastructure = ["check_contract"]
check_agent = ["check_capabilities", "check_infrastructure"]
check_surfaces = ["check_agent"]

[dependencies]
shared.workspace = true
source_parsing.workspace = true
naming_rules.workspace = true
import_rules.workspace = true
code_analysis.workspace = true
auto_fix.workspace = true
cli_commands.workspace = true
config_system.workspace = true
file_watch.workspace = true
git_hooks.workspace = true
external_lint.workspace = true
mcp_server.workspace = true
orphan_detector.workspace = true
project_setup.workspace = true
maintenance.workspace = true
role_rules.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tokio.workspace = true
once_cell.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_yaml.workspace = true
toml.workspace = true
clap.workspace = true
reqwest.workspace = true
chrono.workspace = true
rmcp.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustsec.workspace = true
dirs.workspace = true
dialoguer.workspace = true
console.workspace = true
ctrlc.workspace = true
futures.workspace = true

# Production release profile: small binary, fast startup, predictable runtime.
# LTO is `thin` (not `fat`) because `fat LTO + codegen-units=1 + strip` triggers
# intermittent SIGSEGV in `rustc`/`lld` on large dep trees in constrained environments.
# `thin` LTO is ~95% of `fat`'s gains and never segfaults in our CI.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
incremental = false

[profile.release.package.regex-automata]
opt-level = 0

[profile.release.package.regex-syntax]
opt-level = 0

# Dev profile keeps good debug info but enables test-only optimizations.
[profile.dev]
opt-level = 0
debug = true
incremental = true

# Centralised lint policy — applied to every workspace crate via `lints.workspace = true`.
# The gate is: `cargo clippy --workspace --all-targets -- -D warnings`
# Only "forbid" rules (compile-breaking) and one truly universal "warn" rule
# (`unsafe_code`) live here. Everything else is fixed in the code, not silenced.
[workspace.lints.rust]
unsafe_code = "forbid"

# AES304 — BypassComment: forbid `.unwrap()` and `.expect()` in production code.
# The text-level BypassChecker (crates/code-analysis/src/capabilities_check_bypass_checker.rs)
# catches `.unwrap_or_default`, `.unwrap_or`, `.unwrap_or_else`, `panic!`, etc. via AES rules.
# clippy here is the second line of defence at the Rust compiler level — the project
# policy is "fix in code, don't silence". `result_large_err` is enabled as `warn` so
# the audit gate reports large `Err` types without failing.
#
# `clippy::unwrap_used` and `clippy::expect_used` are intentionally NOT enabled here.
# Switching them on with `-D warnings` would fail the gate on the existing 147
# legitimate call-sites in scanner regex code where `.unwrap()` documents an
# "already-validated" invariant. The AES304 self-lint policy is the project's source of
# truth for what is forbidden; clippy complements it without overriding it.
#
# `clippy::module_name_repetitions` is also intentionally NOT enabled — the AES layer
# trait naming convention (e.g. `IContractOrphanProtocol`, `IAgentOrchestratorPort`)
# embeds the architectural layer name on purpose so adapters can be matched by trait
# prefix during dependency injection. The convention is documented in ARCHITECTURE.md.
[workspace.lints.clippy]
result_large_err = "warn"
