[workspace]
resolver = "2"
members = ["crates/*"]

#do not bypass with allow
[workspace.lints.clippy]

[workspace.dependencies]
# Workspace member crates (version required for crates.io publish)
shared = { package = "shared-lint-arwaky", path = "crates/shared", version = "1.10.106" }
naming_rules = { package = "naming_rules-lint-arwaky", path = "crates/naming-rules", version = "1.10.106" }
import_rules = { package = "import_rules_lint_arwaky", path = "crates/import-rules", version = "1.10.106" }
code_analysis = { package = "code_analysis-lint-arwaky", path = "crates/code-analysis", version = "1.10.106" }
auto_fix = { package = "auto_fix-lint-arwaky", path = "crates/auto-fix", version = "1.10.106" }
cli_commands = { package = "cli_commands-lint-arwaky", path = "crates/cli-commands", version = "1.10.106" }
config_system = { package = "config_system-lint-arwaky", path = "crates/config-system", version = "1.10.106" }
file_watch = { package = "file_watch-lint-arwaky", path = "crates/file-watch", version = "1.10.106" }
git_hooks = { package = "git_hooks-lint-arwaky", path = "crates/git-hooks", version = "1.10.106" }
external_lint = { package = "external_lint-lint-arwaky", path = "crates/external-lint", version = "1.10.106" }
mcp_server = { package = "mcp_server-lint-arwaky", path = "crates/mcp-server", version = "1.10.106" }
orphan_detector = { package = "orphan_detector-lint-arwaky", path = "crates/orphan-detector", version = "1.10.106" }
project_setup = { package = "project_setup-lint-arwaky", path = "crates/project-setup", version = "1.10.106" }
maintenance = { package = "maintenance-lint-arwaky", path = "crates/maintenance", version = "1.10.106" }
role_rules = { package = "role_rules-lint-arwaky", path = "crates/role-rules", version = "1.10.106" }
report_formatter = { package = "report_formatter-lint-arwaky", path = "crates/report-formatter", version = "1.10.106" }

# External dependencies (pinned versions - all crates inherit from here)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.52.3", features = ["full"] }
notify = "6"
notify-debouncer-mini = "0.4"
once_cell = "1.21.4"
async-trait = "0.1.89"
thiserror = "1.0.52"
anyhow = "1.0.102"
serde_yaml_ng = "0.10.0"
toml = "1.1.2"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
chrono = "0.4.44"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1.2"
rand = "0.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rustsec = "0.33"
dirs = "6.0"
dialoguer = "0.11"
console = "0.15"
ctrlc = "3.4"
futures = "0.3"
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
tui = { package = "tui-lint-arwaky", path = "crates/tui", version = "1.10.106" }

[package]
name = "lint_arwaky-arwaky"
version = "1.10.111"
edition = "2021"
description = "Autonomous code quality and architecture enforcement for AI agents and developers, enforcing 27 Agentic Engineering System (AES) rules."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
homepage = "https://github.com/rakaarwaky/lint-arwaky"
readme = "README.md"

[lib]
name = "lint_arwaky"
path = "crates/lib.rs"

[[bin]]
name = "lint-arwaky-cli"
path = "crates/root_cli_main_entry.rs"

[[bin]]
name = "lint-arwaky-mcp"
path = "crates/root_mcp_main_entry.rs"

[[bin]]
name = "lint-arwaky-tui"
path = "crates/root_tui_main_entry.rs"


[dependencies]
shared.workspace = true
naming_rules.workspace = true
import_rules.workspace = true
code_analysis.workspace = true
auto_fix.workspace = true
cli_commands.workspace = true
config_system.workspace = true
file_watch.workspace = true
git_hooks.workspace = true
external_lint.workspace = true
mcp_server.workspace = true
orphan_detector.workspace = true
project_setup.workspace = true
maintenance.workspace = true
role_rules.workspace = true
report_formatter.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tokio.workspace = true
once_cell.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_yaml_ng.workspace = true
toml.workspace = true
clap.workspace = true
reqwest.workspace = true
chrono.workspace = true
tui.workspace = true
rmcp.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustsec.workspace = true
dirs.workspace = true
dialoguer.workspace = true
console.workspace = true
ctrlc.workspace = true
futures.workspace = true

# Production release profile: small binary, fast startup, predictable runtime.
# `codegen-units=16` avoids intermittent SIGSEGV triggered by `codegen-units=1`
# combined with `opt-level=z` + `panic=abort` on large dep trees.
[profile.release]
opt-level = "z"
lto = false
codegen-units = 16
strip = "symbols"
panic = "abort"
debug = false
incremental = false

[profile.release.package.regex-automata]
opt-level = 0

[profile.release.package.regex-syntax]
opt-level = 0

# Dev profile: fast incremental builds for development.
[profile.dev]
opt-level = 0
debug = 1          # line tables only (faster than full debug info)
incremental = true
codegen-units = 256 # more units = faster incremental builds

# Centralised lint policy — applied to every workspace crate via `lints.workspace = true`.
# The gate is: `cargo clippy --workspace --all-targets -- -D warnings`
# Only "forbid" rules (compile-breaking) and one truly universal "warn" rule
# (`unsafe_code`) live here. Everything else is fixed in the code, not silenced.
[workspace.lints.rust]
unsafe_code = "forbid"
