[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arwaky-lint"
version = "1.10.2"
description = "MCP server for autonomous linting and architecture auditing"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Raka Arwaky", email = "arwaky90@gmail.com"}
]
keywords = ["mcp", "linting", "architecture", "ruff", "mypy", "ai", "linter", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "fastmcp>=0.4.1",
    "pydantic>=2.0",
    "pydantic-settings",
    "ruff",
    "mypy",
    "bandit",
    "radon",
    "pip-audit",
    "click",
    "rich",
    "tabulate",
    "watchdog",
    "watchfiles",
    "httpx>=0.27.0",
    "httpx-sse",
    "pyyaml",
    "python-dotenv",
    "toml",
    "tomli",
    "tomli-w",
    "jinja2",
    "anyio",
    "aiofile",
    "psutil",
    "pathspec",
    "libcst",
    "jsonschema",
    "nest-asyncio",
    "beartype",
    "attrs",
    "marshmallow",
    "marshmallow-enum",
    "cyclopts",
]

[project.urls]
Homepage = "https://github.com/rakaarwaky/auto-linter"
Repository = "https://github.com/rakaarwaky/auto-linter"
"Install (Linux/macOS)" = "https://raw.githubusercontent.com/rakaarwaky/auto-linter/main/install.sh"
"Install (Windows)" = "https://raw.githubusercontent.com/rakaarwaky/auto-linter/main/install.ps1"

[project.scripts]
auto-linter = "auto_linter:mcp_main"
auto-lint = "auto_linter:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pyre-check",
    "TestSlide",
    "coverage",
]

[tool.setuptools]
package-dir = {"auto_linter" = "src-python"}
packages = [
    "auto_linter",
    "auto_linter.agent",
    "auto_linter.capabilities",
    "auto_linter.contract",
    "auto_linter.infrastructure",
    "auto_linter.surfaces",
    "auto_linter.taxonomy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.ruff]
src = ["src-python"]
target-version = "py312"
exclude = [
    "test-project-python",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".git",
    "node_modules",
    ".ruff_cache",
]

[tool.ruff.lint.per-file-ignores]
"src-python/taxonomy/js_taxonomy_bridge.py" = ["F401"]
"src-python/taxonomy/rust_taxonomy_bridge.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
exclude = ["test-project-python/", "_io\\.py$"]

[[tool.mypy.overrides]]
module = "src.infrastructure.stdio_transport_client"
disable_error_code = ["arg-type", "misc"]

[[tool.mypy.overrides]]
module = "src.surfaces.core_multi_command"
disable_error_code = ["abstract", "call-arg", "arg-type"]

