[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arwaky-pipeline"
version = "2.4.1"
description = "AES-compliant pipeline orchestration framework"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Arwaky Core Team", email = "core@arwaky.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocstrings>=0.24.0",
]

[project.scripts]
arwaky = "arwaky_pipeline.__main__:main"

[tool.setuptools.packages.find]
where = ["src-python"]
include = ["arwaky_pipeline*"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["output", "scratch"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "SIM", "ARG", "PTH", "RET"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
explicit_any = false
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
warn_no_return = false

[tool.bandit]
exclude_dirs = ["output", "scratch", "tests"]
skips = ["B101", B301"]
