[package]
name = "auto_fix-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Auto-fix processor that applies mechanical corrections for AES rule violations surfaced by the linter family."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
