[package]
name = "cli_commands-lint-arwaky"
version = "1.10.14"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
futures.workspace = true
anyhow.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
tokio.workspace = true
shared.workspace = true
dirs.workspace = true
source_parsing.workspace = true
auto_fix.workspace = true
code_analysis.workspace = true
import_rules.workspace = true
config_system.workspace = true
project_setup.workspace = true
external_lint.workspace = true
multi_project.workspace = true
orphan_detector.workspace = true
file_watch.workspace = true
