[package]
name = "cli_commands-lint-arwaky"
version = "1.10.14"
edition = "2021"
description = "CLI command surfaces (`check`, `scan`, `fix`, `git`, `config`, `setup`, `tui`, `watch`) composing the agent orchestrators into the user-facing CLI."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = false

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
futures.workspace = true
anyhow.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
tokio.workspace = true
shared.workspace = true
dirs.workspace = true
git_hooks.workspace = true
source_parsing.workspace = true
auto_fix.workspace = true
code_analysis.workspace = true
import_rules.workspace = true
config_system.workspace = true
project_setup.workspace = true
external_lint.workspace = true
orphan_detector.workspace = true
file_watch.workspace = true
