[package]
name = "cli-commands-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "CLI command surfaces (`check`, `scan`, `fix`, `git`, `config`, `setup`, `tui`, `watch`) composing the agent orchestrators into the user-facing CLI."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
futures.workspace = true
anyhow.workspace = true
serde_yaml_ng.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
tokio.workspace = true
shared.workspace = true
dirs.workspace = true
import_rules.workspace = true
naming_rules.workspace = true
role_rules.workspace = true
code_analysis.workspace = true
external_lint.workspace = true
orphan_detector.workspace = true
auto_fix.workspace = true
config_system.workspace = true
git_hooks.workspace = true
file_watch.workspace = true
project_setup.workspace = true
maintenance.workspace = true
report_formatter.workspace = true
regex.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
shared.workspace = true
tokio.workspace = true
