[package]
name = "cli_transport"
version = "1.10.11"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
cli_commands = { path = "../cli-commands" }
pipeline_jobs = { path = "../pipeline-jobs" }
shared_common = { path = "../shared-common" }
source_parsing = { path = "../source-parsing" }
