[package]
name = "code_analysis-lint-arwaky"
version = "1.10.14"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
once_cell.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
shared.workspace = true
source_parsing.workspace = true
