[package]
name = "code_analysis-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Code-quality analyzers (file-size limits, code duplication detection, bypass checks, mandatory definition enforcement) covering AES301–AES305."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
once_cell.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
shared.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
shared.workspace = true
tempfile = "3"

[[bench]]
name = "bench_code_analysis_throughput"
path = "tests/bench_code_analysis_throughput.rs"
harness = false
