[package]
name = "external-lint-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Adapters for external linters — Rust (clippy, rustfmt, cargo-audit), Python (ruff, mypy, bandit), JavaScript/TypeScript (eslint, prettier, tsc). Invoked via stdio."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
regex.workspace = true
tracing.workspace = true
rustsec.workspace = true
dirs.workspace = true
futures.workspace = true
tokio.workspace = true
shared.workspace = true
toml.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio.workspace = true

[[bench]]
name = "bench_external_lint_selector"
path = "benches/bench_external_lint_selector.rs"
harness = false
