[package]
name = "file_watch-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Filesystem watcher built on `notify` + debouncer; re-runs the lint pipeline on Rust/JS/Python file mutations."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
tokio.workspace = true

[features]
watch = []
