[package]
name = "file_watch-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Filesystem watcher built on `notify` + debouncer; re-runs the lint pipeline on Rust/JS/Python file mutations."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio.workspace = true

[[bench]]
name = "bench_file_watch_change_analyzer"
path = "tests/bench_file_watch_change_analyzer.rs"
harness = false

[features]
watch = []
